# Fish_niche

./: .gitignore  .gitmodules  icemodelvsdatactl.csv  icemodelvsdatainflow.csv  icemodelvsdatapr.csv  icemodelvsdataps.csv  icemodelvsdatarsds.csv  icemodelvsdatasfcWind.csv  icemodelvsdatatas.csv  mylake_init_ISIMIP.py  run_MyLake.py
IO/: 2017SwedenList_only_validation_12lakes.csv  2017SwedenList_test_initial.csv  Graphics.py  Main_fish_niche.py  MyLake_optimizer.m  lake_information.py  mylakeGoran.m  mylakeGoran_optimizefinal_all.m  reorganise_infor.py
ISIMIP/: MyLake-autoCalibration_isimip_calibGLM-rmp.R  figure_isinip.py  formatDate.asv  formatDate.m  formatTempIssues.py  myLake_input.py  myLake_optimisation.py  myLake_par.py  myLake_post.py  mylakeGoran.asv  mylakeGoran.m  mylakeGoran_test.m  mylake_init_ISIMIP.py  recapitulatif.cvs  recapitulatif.xlsx  recapitulatif1.xlsx  run_myLake_ISIMIP.py  run_myLake_parallel - Copie.py  run_myLake_parallel.py  scratch.py  testeee.py  testruformat.m  testrun.m  testtt.py  txt_to_netcdf.py  ~$recapitulatif.xlsx
Postproc/: FishNiche_export_timeseries.m  FishNiche_output_analysis_scripts2.py  FishNiche_plot_timeseries.m  Fish_Niche_output_plot_Analysis_script.ipynb  exportVolumeTimeseries.m  figure_ice_time.py  generateAreaTimeseries.m  generateVolumeTimeseries.m  getOutputPathFromEbHex.m  plot_montly_temp_light_profile.py  readLakeListCsv.m  rungenerateAreaTimeseries.asv  rungenerateAreaTimeseries.m  thermocline_function.py  verification.py
lakes/: Graphics.py  (+87 more)
sediments/ph-module/: CMakeLists.txt  build_pH.m  pH.cpp  test.m
(+544 files in other folders)
